style: add style to prevent layout shifts

--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,7 @@
 body {
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+html {
+  scrollbar-gutter: stable both-edges;
+}
